--- a/sdk/policyinsights/Microsoft.Azure.Management.PolicyInsights/src/Microsoft.Azure.Management.PolicyInsights.csproj
+++ b/sdk/policyinsights/Microsoft.Azure.Management.PolicyInsights/src/Microsoft.Azure.Management.PolicyInsights.csproj
@@ -7,11 +7,11 @@
     <PackageId>Microsoft.Azure.Management.PolicyInsights</PackageId>
     <Description>Provides policy insights operations for Microsoft Azure.</Description>
     <AssemblyName>Microsoft.Azure.Management.PolicyInsights</AssemblyName>
-    <Version>3.1.0</Version>
+    <Version>3.2.0</Version>
     <PackageTags>Azure;Policy;PolicyInsights;PolicyEvent;PolicyState;Compliance;</PackageTags>
     <PackageReleaseNotes><![CDATA[
-      - Added support for triggering compliance evaluations
-      - Added policyDefinitionVersion, policySetDefinitionVersion, and policyAssignmentVersion columns to policy states query results
+      - Added support for retrieving resource component compliance state
+      - Added support for retrieving resource component events
     ]]></PackageReleaseNotes>
   </PropertyGroup>
   <PropertyGroup>
